# football-data-analytics

./: .gitignore  docker-compose.yml  pyproject.toml  requirements.txt  setup.md
dags/: wikipedia_flow.py
pipelines/: wikipedia_pipeline.py
